Update legend in form example under content guidelines. Default line-heigh of legend was too big for showing correct example.

--- a/src/less/components/forms/radio.less
+++ b/src/less/components/forms/radio.less
@@ -81,6 +81,13 @@ fieldset {
                 transform: translateY(-50%);
             }
         }
+
+        &.legend-example {
+            legend {
+                line-height: 1rem;
+                margin-bottom: 1rem;
+            }
+        }
     }
 
     &[disabled] {
